--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,37 +1,40 @@
 #
-#Mon Apr 23 02:05:07 CEST 2018
-codename1.vendor=CodenameOne
-codename1.displayName=CupcakesMobile
-codename1.icon=icon.png
-codename1.arg.java.version=8
-codename1.languageLevel=5
-codename1.ios.debug.certificatePassword=
-codename1.secondaryTitle=CodenameOne_Template
-codename1.version=1.0
-codename1.mainName=MyApplication
-codename1.ios.certificatePassword=
-codename1.ios.release.provision=
-codename1.arg.ios.newStorageLocation=true
-codename1.rim.signtoolDb=
-libVersion=212
-codename1.ios.release.certificatePassword=
-codename1.ios.certificate=
-codename1.arg.ios.objC=true
-codename1.ios.release.certificate=
-codename1.j2me.nativeTheme=nbproject/nativej2me.res
-codename1.android.keystorePassword=
-codename1.arg.ios.add_libs=,libc++.dylib,CoreText.framework,MessageUI.framework,CoreVideo.framework,CoreMedia.framework
+#Sun Apr 29 20:03:26 CET 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
-codename1.rim.signtoolCsk=
-codename1.ios.debug.certificate=
-codename1.arg.android.xapplication=<activity android\:name\="com.dm.zbar.android.scanner.ZBarScannerActivity" android\:screenOrientation\="landscape" android\:label\="@string/app_name" tools\:replace\="android\:label" /><activity android\:name\="com.scandit.barcodepicker.BarcodePickerActivity" android\:label\="@string/app_name" android\:screenOrientation\="sensor" android\:configChanges\="orientation|screenSize"></activity>
-codename1.arg.android.proguardKeep=\  -keep class net.sourceforge.zbar.** {*;} 
-codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.CAMERA"/><uses-feature android\:name\="android.hardware.camera" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.autofocus" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.flash" android\:required\="false"/>
-codename1.android.keystore=
+codename1.ios.release.provision=
+codename1.arg.java.version=8
+codename1.arg.ios.objC=true
+codename1.arg.ios.newStorageLocation=true
+codename1.j2me.nativeTheme=nbproject/nativej2me.res
+codename1.displayName=CupcakesMobile
 codename1.android.keystoreAlias=
-codename1.rim.certificatePassword=
-codename1.ios.provision=
-codename1.ios.debug.provision=
-codename1.arg.android.permission.VIBRATE=true
-codename1.packageName=com.mycompany.myapp
+codename1.arg.android.xapplication=<activity android\:name\="com.dm.zbar.android.scanner.ZBarScannerActivity" android\:screenOrientation\="landscape" android\:label\="@string/app_name" tools\:replace\="android\:label" /><activity android\:name\="com.scandit.barcodepicker.BarcodePickerActivity" android\:label\="@string/app_name" android\:screenOrientation\="sensor" android\:configChanges\="orientation|screenSize"></activity>
 codename1.arg.android.permission.CAMERA=true
+codename1.ios.release.certificate=
+codename1.android.keystorePassword=
+codename1.ios.provision=
+codename1.arg.ios.add_libs=,libc++.dylib,CoreText.framework,MessageUI.framework,CoreVideo.framework,CoreMedia.framework
+codename1.languageLevel=5
+codename1.android.keystore=
+codename1.arg.android.buildToolsVersion=27
+codename1.vendor=CodenameOne
+codename1.arg.android.permission.VIBRATE=true
+codename1.ios.certificatePassword=
+codename1.arg.ios.NSCameraUsageDescription=We need camera access to grab pictures and videos
+codename1.ios.debug.certificatePassword=
+codename1.mainName=MyApplication
+codename1.ios.release.certificatePassword=
+codename1.ios.debug.certificate=
+libVersion=212
+codename1.arg.android.proguardKeep=\  -keep class net.sourceforge.zbar.** {*;} -dontwarn com.google.android.gms.**
+codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.CAMERA"/><uses-feature android\:name\="android.hardware.camera" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.autofocus" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.flash" android\:required\="false"/>
+codename1.secondaryTitle=CodenameOne_Template
+codename1.ios.debug.provision=
+codename1.rim.certificatePassword=
+codename1.version=1.0
+codename1.ios.certificate=
+codename1.icon=icon.png
+codename1.rim.signtoolCsk=
+codename1.arg.android.gradleDep=compile 'com.wonderkiln\:camerakit\:0.13.1';
+codename1.rim.signtoolDb=
+codename1.packageName=com.mycompany.myapp
