--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,12 +26,11 @@ dist.jar=${dist.dir}/CupcakesMobile.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.native-internal_tmp=native/internal_tmp
 file.reference.CLDC11.jar=lib/CLDC11.jar
 file.reference.CodenameOne.jar=lib/CodenameOne.jar
 file.reference.CodenameOne_SRC.zip=lib/CodenameOne_SRC.zip
-file.reference.CupcakesMobile-override=override
 file.reference.impl-cls=lib/impl/cls
+file.reference.impl-native=lib/impl/native
 file.reference.impl-stubs=lib/impl/stubs
 file.reference.JavaSE.jar=JavaSE.jar
 includes=**
@@ -40,8 +39,8 @@ javac.classpath=\
     ${file.reference.CLDC11.jar}:\
     ${file.reference.CodenameOne.jar}:\
     ${file.reference.CodenameOne_SRC.zip}:\
-    ${file.reference.CupcakesMobile-override}:\
     ${file.reference.impl-cls}:\
+    ${file.reference.impl-native}:\
     ${file.reference.impl-stubs}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -75,8 +74,7 @@ platform.active=default_platform
 run.classpath=\
     ${file.reference.JavaSE.jar}:\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${file.reference.native-internal_tmp}
+    ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
