--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Sun Apr 29 21:05:41 CET 2018
+#Sun Apr 29 22:26:10 CET 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -8,7 +8,7 @@ codename1.arg.ios.newStorageLocation=true
 codename1.j2me.nativeTheme=nbproject/nativej2me.res
 codename1.displayName=CupcakesMobile
 codename1.android.keystoreAlias=
-codename1.arg.android.xapplication=<activity android\:name\="com.dm.zbar.android.scanner.ZBarScannerActivity" android\:screenOrientation\="landscape" android\:label\="@string/app_name" tools\:replace\="android\:label" /><activity android\:name\="com.scandit.barcodepicker.BarcodePickerActivity" android\:label\="@string/app_name" android\:screenOrientation\="sensor" android\:configChanges\="orientation|screenSize"></activity>
+codename1.arg.android.xapplication=<activity android\:name\="com.dm.zbar.android.scanner.ZBarScannerActivity" android\:screenOrientation\="landscape" android\:label\="@string/app_name" tools\:replace\="android\:label" /><activity android\:name\="com.scandit.barcodepicker.BarcodePickerActivity" android\:label\="@string/app_name" android\:screenOrientation\="sensor" android\:configChanges\="orientation|screenSize"></activity><receiver android\:name\="com.codename1.sms.intercept.SMSListener"  android\:enabled\="true" android\:permission\="android.permission.BROADCAST_SMS"  android\:exported\="true">                    <intent-filter android\:priority\="2147483647"><category android\:name\="android.intent.category.DEFAULT" />        <action android\:name\="android.provider.Telephony.SMS_RECEIVED" />                 </intent-filter>             </receiver>
 codename1.arg.android.permission.CAMERA=true
 codename1.ios.release.certificate=
 codename1.android.keystorePassword=
@@ -27,7 +27,7 @@ codename1.ios.release.certificatePassword=
 codename1.ios.debug.certificate=
 libVersion=212
 codename1.arg.android.proguardKeep=\  -keep class net.sourceforge.zbar.** {*;} -dontwarn com.google.android.gms.**
-codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.CAMERA"/><uses-feature android\:name\="android.hardware.camera" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.autofocus" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.flash" android\:required\="false"/>
+codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.CAMERA"/><uses-feature android\:name\="android.hardware.camera" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.autofocus" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.flash" android\:required\="false"/><uses-permission android\:name\="android.permission.RECEIVE_SMS" />
 codename1.secondaryTitle=CodenameOne_Template
 codename1.ios.debug.provision=
 codename1.rim.certificatePassword=
