--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,9 +1,5 @@
 #
-<<<<<<< HEAD
-#Mon Apr 30 16:07:36 CEST 2018
-=======
-#Mon Apr 30 15:08:25 CET 2018
->>>>>>> master
+#Mon Apr 30 18:50:53 CEST 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -11,42 +7,34 @@ codename1.arg.rim.obfuscation=false
 codename1.arg.ios.objC=true
 codename1.arg.ios.newStorageLocation=true
 codename1.j2me.nativeTheme=nbproject/nativej2me.res
-<<<<<<< HEAD
-codename1.displayName=CupcakesMobile
-codename1.arg.ios.pods.platform=,7.0
-=======
 codename1.arg.ios.project_type=ios
 codename1.arg.ios.interface_orientation=UIInterfaceOrientationPortrait\:UIInterfaceOrientationPortraitUpsideDown\:UIInterfaceOrientationLandscapeLeft\:UIInterfaceOrientationLandscapeRight
 codename1.displayName=Cupcakes
->>>>>>> master
+codename1.arg.ios.pods.platform=,7.0
 codename1.android.keystoreAlias=
 codename1.arg.android.xapplication=<activity android\:name\="com.dm.zbar.android.scanner.ZBarScannerActivity" android\:screenOrientation\="landscape" android\:label\="@string/app_name" tools\:replace\="android\:label" /><activity android\:name\="com.scandit.barcodepicker.BarcodePickerActivity" android\:label\="@string/app_name" android\:screenOrientation\="sensor" android\:configChanges\="orientation|screenSize"></activity><receiver android\:name\="com.codename1.sms.intercept.SMSListener"  android\:enabled\="true" android\:permission\="android.permission.BROADCAST_SMS"  android\:exported\="true">                    <intent-filter android\:priority\="2147483647"><category android\:name\="android.intent.category.DEFAULT" />        <action android\:name\="android.provider.Telephony.SMS_RECEIVED" />                 </intent-filter>             </receiver>
 codename1.arg.android.permission.CAMERA=true
 codename1.ios.release.certificate=
+<<<<<<<=HEAD
 codename1.android.keystorePassword=
 codename1.ios.provision=
 codename1.arg.ios.add_libs=,libc++.dylib,CoreText.framework,MessageUI.framework,CoreVideo.framework,CoreMedia.framework
-<<<<<<< HEAD
-codename1.arg.ios.glAppDelegateHeader=\n\#import "GoogleMaps/GoogleMaps.h"
-=======
 codename1.arg.ios.dsym=false
 codename1.arg.android.release=true
+codename1.arg.ios.glAppDelegateHeader=\n\#import "GoogleMaps/GoogleMaps.h"
 codename1.arg.ios.statusbar_hidden=false
->>>>>>> master
 codename1.languageLevel=5
 codename1.android.keystore=
 codename1.arg.android.buildToolsVersion=27
 codename1.arg.ios.pods=,GoogleMaps
 codename1.vendor=CodenameOne
 codename1.arg.android.permission.VIBRATE=true
-<<<<<<< HEAD
-codename1.arg.android.playService.maps=true
-=======
 codename1.arg.win.ver=8
->>>>>>> master
+codename1.arg.android.playService.maps=true
 codename1.ios.certificatePassword=
 codename1.arg.ios.NSCameraUsageDescription=We need camera access to grab pictures and videos
 codename1.ios.debug.certificatePassword=
+>>>>>>>=master
 codename1.arg.android.GoogleMaps.minPlayServicesVersion=9.4.0
 codename1.mainName=MyApplication
 codename1.arg.ios.pods.sources=,https\://github.com/CocoaPods/Specs.git
@@ -55,13 +43,9 @@ codename1.arg.ios.prerendered_icon=false
 codename1.ios.debug.certificate=
 libVersion=212
 codename1.arg.android.proguardKeep=\  -keep class net.sourceforge.zbar.** {*;} -dontwarn com.google.android.gms.**
-<<<<<<< HEAD
 codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.CAMERA"/><uses-feature android\:name\="android.hardware.camera" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.autofocus" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.flash" android\:required\="false"/><uses-permission android\:name\="android.permission.RECEIVE_SMS" /><uses-permission android\:name\="android.permission.ACCESS_NETWORK_STATE"/> <uses-permission android\:name\="com.google.android.providers.gsf.permission.READ_GSERVICES"/><uses-feature         android\:glEsVersion\="0x00020000"         android\:required\="true"/>
-=======
-codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.CAMERA"/><uses-feature android\:name\="android.hardware.camera" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.autofocus" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.flash" android\:required\="false"/><uses-permission android\:name\="android.permission.RECEIVE_SMS" />
 codename1.arg.ios.application_exits=false
 codename1.description=
->>>>>>> master
 codename1.secondaryTitle=CodenameOne_Template
 codename1.ios.debug.provision=
 codename1.arg.j2me.nativeThemeConst=0
@@ -76,3 +60,4 @@ codename1.rim.signtoolDb=
 codename1.arg.ios.testFlight=false
 codename1.arg.ios.includePush=false
 codename1.packageName=com.mycompany.myapp
+=\=\=\=\=\=\=
