--- a/Versions.properties
+++ b/Versions.properties
@@ -1,11 +1,10 @@
 #
-<<<<<<< HEAD
-#Mon Apr 30 16:02:00 CEST 2018
-=======
-#Mon Apr 30 15:05:56 CET 2018
->>>>>>> master
+#Mon Apr 30 22:40:59 CET 2018
 CodenameOne_SRCzip=15
 CodenameOneJar=15
 CodeNameOneBuildClientJar=5
+>>>>>>>=master
 CLDC11Jar=13
 JavaSEJar=16
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
