--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Mon Apr 30 20:49:30 CEST 2018
+#Mon Apr 30 22:42:35 CET 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -34,19 +34,19 @@ codename1.arg.android.playService.maps=true
 codename1.ios.certificatePassword=
 codename1.arg.ios.NSCameraUsageDescription=We need camera access to grab pictures and videos
 codename1.ios.debug.certificatePassword=
->>>>>>>=master
 codename1.arg.android.GoogleMaps.minPlayServicesVersion=9.4.0
 codename1.mainName=MyApplication
+>>>>>>>=master
 codename1.arg.ios.pods.sources=,https\://github.com/CocoaPods/Specs.git
 codename1.ios.release.certificatePassword=
 codename1.arg.ios.prerendered_icon=false
-codename1.ios.debug.certificate=
 libVersion=212
+codename1.ios.debug.certificate=
 codename1.arg.android.proguardKeep=\  -keep class net.sourceforge.zbar.** {*;} -dontwarn com.google.android.gms.**
 codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.CAMERA"/><uses-feature android\:name\="android.hardware.camera" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.autofocus" android\:required\="false"/><uses-feature android\:name\="android.hardware.camera.flash" android\:required\="false"/><uses-permission android\:name\="android.permission.RECEIVE_SMS" /><uses-permission android\:name\="android.permission.ACCESS_NETWORK_STATE"/> <uses-permission android\:name\="com.google.android.providers.gsf.permission.READ_GSERVICES"/><uses-feature         android\:glEsVersion\="0x00020000"         android\:required\="true"/>
 codename1.arg.ios.application_exits=false
-codename1.description=
 codename1.secondaryTitle=CodenameOne_Template
+codename1.description=
 codename1.ios.debug.provision=
 codename1.arg.j2me.nativeThemeConst=0
 codename1.rim.certificatePassword=
