--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Mon Apr 30 18:50:53 CEST 2018
+#Wed May 02 02:48:16 CEST 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -30,6 +30,7 @@ codename1.arg.ios.pods=,GoogleMaps
 codename1.vendor=CodenameOne
 codename1.arg.android.permission.VIBRATE=true
 codename1.arg.win.ver=8
+codename1.arg.ios.locationUsageDescription=Some functionality of the application depends on your location
 codename1.arg.android.playService.maps=true
 codename1.ios.certificatePassword=
 codename1.arg.ios.NSCameraUsageDescription=We need camera access to grab pictures and videos
@@ -57,7 +58,7 @@ codename1.rim.signtoolCsk=
 codename1.arg.android.gradleDep=compile 'com.wonderkiln\:camerakit\:0.13.1';
 codename1.arg.android.debug=false
 codename1.rim.signtoolDb=
-codename1.arg.ios.testFlight=false
 codename1.arg.ios.includePush=false
+codename1.arg.ios.testFlight=false
 codename1.packageName=com.mycompany.myapp
 =\=\=\=\=\=\=
