--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/dong/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\haffe\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
