--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,9 +1,5 @@
 #
-<<<<<<< HEAD
-#Wed May 02 02:33:08 CEST 2018
-=======
-#Wed May 02 01:31:43 CET 2018
->>>>>>> d75650cca71183a16de600cae34c0479e788a1d1
+#Wed May 02 03:29:38 CET 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -16,36 +12,34 @@ codename1.arg.ios.interface_orientation=UIInterfaceOrientationPortrait\:UIInterf
 codename1.displayName=Cupcakes
 codename1.arg.ios.pods.platform=,7.0,9.0
 codename1.android.keystoreAlias=
+codename1.arg.android.xapplication=<receiver android\:name\="com.codename1.sms.intercept.SMSListener"  android\:enabled\="true" android\:permission\="android.permission.BROADCAST_SMS"  android\:exported\="true">                    <intent-filter android\:priority\="2147483647"><category android\:name\="android.intent.category.DEFAULT" />        <action android\:name\="android.provider.Telephony.SMS_RECEIVED" />                 </intent-filter>             </receiver>
 codename1.ios.release.certificate=
 <<<<<<<=HEAD
 codename1.android.keystorePassword=
 codename1.ios.provision=
-codename1.arg.android.sdkVersion=25
 codename1.arg.ios.dsym=false
 codename1.arg.android.release=true
 codename1.arg.ios.statusbar_hidden=false
-codename1.arg.android.min_sdk_version=16
 codename1.languageLevel=5
 codename1.android.keystore=
 codename1.arg.ios.pods=,GoogleMaps,BraintreeDropIn
 codename1.vendor=CodenameOne
-codename1.arg.android.permission.VIBRATE=true
 codename1.arg.win.ver=8
 codename1.ios.certificatePassword=
 codename1.arg.ios.NSCameraUsageDescription=We need camera access to grab pictures and videos
 codename1.ios.debug.certificatePassword=
-codename1.arg.android.GoogleMaps.minPlayServicesVersion=9.4.0
 >>>>>>>=master
 codename1.mainName=MyApplication
 codename1.arg.ios.pods.sources=,https\://github.com/CocoaPods/Specs.git
 codename1.ios.release.certificatePassword=
 codename1.arg.ios.prerendered_icon=false
-libVersion=212
 codename1.ios.debug.certificate=
+libVersion=212
 codename1.arg.ios.xcode_version=9.2
+codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.RECEIVE_SMS" />
 codename1.arg.ios.application_exits=false
-codename1.secondaryTitle=CodenameOne_Template
 codename1.description=
+codename1.secondaryTitle=CodenameOne_Template
 codename1.ios.debug.provision=
 codename1.arg.j2me.nativeThemeConst=0
 codename1.rim.certificatePassword=
@@ -53,7 +47,6 @@ codename1.version=1.0
 codename1.ios.certificate=
 codename1.icon=icon.png
 codename1.rim.signtoolCsk=
-codename1.arg.android.gradleDep=compile 'com.braintreepayments.api\:drop-in\:3.0+'
 codename1.arg.android.debug=false
 codename1.rim.signtoolDb=
 codename1.arg.ios.includePush=false
