style for password 2 in popup

--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Wed May 02 03:29:38 CET 2018
+#Wed May 02 03:32:43 CET 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -31,8 +31,8 @@ codename1.arg.android.playService.maps=true
 codename1.ios.certificatePassword=
 codename1.arg.ios.NSCameraUsageDescription=We need camera access to grab pictures and videos
 codename1.ios.debug.certificatePassword=
->>>>>>>=master
 codename1.arg.android.GoogleMaps.minPlayServicesVersion=9.4.0
+>>>>>>>=master
 codename1.mainName=MyApplication
 codename1.arg.ios.pods.sources=,https\://github.com/CocoaPods/Specs.git
 codename1.ios.release.certificatePassword=
@@ -40,7 +40,7 @@ codename1.arg.ios.prerendered_icon=false
 codename1.ios.debug.certificate=
 libVersion=212
 codename1.arg.ios.xcode_version=9.2
-codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.RECEIVE_SMS" />
+codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.RECEIVE_SMS" /><uses-permission android\:name\="android.permission.ACCESS_NETWORK_STATE"/> <uses-permission android\:name\="com.google.android.providers.gsf.permission.READ_GSERVICES"/><uses-feature         android\:glEsVersion\="0x00020000"         android\:required\="true"/>
 codename1.arg.ios.application_exits=false
 codename1.description=
 codename1.secondaryTitle=CodenameOne_Template
