--- a/codenameone_settings.properties
+++ b/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Wed May 02 09:37:56 CEST 2018
+#Fri May 25 04:08:41 CET 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -34,15 +34,15 @@ codename1.ios.debug.certificatePassword=
 codename1.arg.android.GoogleMaps.minPlayServicesVersion=9.4.0
 >>>>>>>=master
 codename1.mainName=MyApplication
-codename1.ios.release.certificatePassword=
 codename1.arg.ios.pods.sources=,https\://github.com/CocoaPods/Specs.git
+codename1.ios.release.certificatePassword=
 codename1.arg.ios.prerendered_icon=false
 codename1.ios.debug.certificate=
 libVersion=212
 codename1.arg.ios.xcode_version=9.2
 codename1.arg.android.xpermissions=<uses-permission android\:name\="android.permission.RECEIVE_SMS" /><uses-permission android\:name\="android.permission.ACCESS_NETWORK_STATE"/> <uses-permission android\:name\="com.google.android.providers.gsf.permission.READ_GSERVICES"/><uses-feature         android\:glEsVersion\="0x00020000"         android\:required\="true"/>
 codename1.arg.ios.application_exits=false
-codename1.description=
+codename1.description=The best pastry in the world.
 codename1.secondaryTitle=CodenameOne_Template
 codename1.ios.debug.provision=
 codename1.arg.j2me.nativeThemeConst=0
@@ -53,7 +53,7 @@ codename1.icon=icon.png
 codename1.rim.signtoolCsk=
 codename1.arg.android.debug=false
 codename1.rim.signtoolDb=
-codename1.arg.ios.testFlight=false
 codename1.arg.ios.includePush=false
+codename1.arg.ios.testFlight=false
 codename1.packageName=com.mycompany.myapp
 =\=\=\=\=\=\=
